fixed misalignment caused by buffer on input

--- a/src/app/new-initiative-form/new-initiative-form.component.css
+++ b/src/app/new-initiative-form/new-initiative-form.component.css
@@ -30,11 +30,18 @@ font-size: 18pt;
 }
 input{
   display: block;
-  width: 100%;
+  width: 99%;
+  padding: .5%;
+  /* width: 98%; */
+  /* margin-right: 1em; */
   /* margin-left: 1em; */
+/* padding-left: 1em;
+margin-left: 1em; */
+
 }
 textarea{
   width: 100%;
+  padding: .5em;
   /* 95% good on small screens 
     99% on large
     ...97 is decent compromise but not optimal
@@ -57,10 +64,11 @@ button[mat-raised-button]{
   margin-left: 5%;
   margin-right: 5%;
   width: 90%;
-  border-radius: 15px;
+  border-radius: 15px; /*rounds corners: alt = 7*/
   font-family: "Futura-Std-Book";
   border: .5px solid #474C55;
   font-size: 14pt;
+  /* padding: 0 1em 3em 1em; */
 }
 mat-form-field {
   width: 100%;
